# bson-modern

./: .pdm-python  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bson/: codec.py  network.py  objectid.py  py3compat.py
