[project]
name = "bson-modern"
version = "1.1.0"
description = "BSON codec for Python - modernized fork with Python 3.9+ support (drop-in replacement for bson)"
authors = [
    {name = "James Westover", email = "james@westover.dev"},
]
maintainers = [
    {name = "James Westover", email = "james@westover.dev"},
]
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
keywords = ["BSON", "codec", "serialization", "mongodb"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-dateutil>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/westover/bson-modern"
Repository = "https://github.com/westover/bson-modern"
Issues = "https://github.com/westover/bson-modern/issues"
"Original Project" = "https://github.com/py-bson/bson"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bson"]

[tool.hatch.build.targets.sdist]
include = [
    "bson/",
    "README.md",
    "LICENSE",
]
